syntax = "proto3";
package prodvana.common_config;
option go_package = "github.com/prodvana/prodvana-public/go/prodvana-sdk/proto/prodvana/common_config";
import "validate/validate.proto";

message EnvValue {
    oneof value_oneof {
        option (validate.required) = true;
        string value = 1;
        // Raw secret value to be used for user-editable YAML and RPC calls.
        string raw_secret = 2;
        // Externally stored secret.
        Secret secret = 3;
        // Kubernetes secret, only works for Kubernetes runtimes.
        KubernetesSecret kubernetes_secret = 4;
    }
}

message SecretReferenceValue {
    oneof value_oneof {
        option (validate.required) = true;
        // Externally stored secret.
        Secret secret = 1;
        // Kubernetes secret, only works for Kubernetes runtimes.
        KubernetesSecret kubernetes_secret = 2;
    }
}

message Secret {
    string key = 1 [(validate.rules).string.min_len = 1];
    string version = 2 [(validate.rules).string.min_len = 1];
}

message KubernetesSecret {
    string secret_name = 1 [(validate.rules).string.min_len = 1];
    string key = 2 [(validate.rules).string.min_len = 1];
}
